# rippy

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  main.py  main_g.py  pyproject.toml  rippy  run.sh
.github/workflows/: release.yml  run_tests.yml  test.yml
lib/: rippy.py
rippy/: cli.py  core.py  ripper.py  utils.py
src/: main.rs  path.rs
src/cdio/: mod.rs
src/disc_id/: mod.rs  tests.rs
src/models/: mod.rs  tests.rs
src/musicbrainz/: mod.rs
src/ripper/: mod.rs
src/tags/: mod.rs  tests.rs
src/ui/: colors.rs  colors_tests.rs  input.rs  input_tests.rs  mod.rs  progress.rs  progress_tests.rs  summary.rs  summary_tests.rs
src/utils/: mod.rs  signal.rs
tests/: core_test.py  rippy_test.py  utils_test.py
