[package]
name = "rippy"
version = "0.3.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
musicbrainz_rs = { version = "0", features = ["sync"] }
flac-codec = "1.3"
libcdio-sys = { version = "2", features = ["paranoia", "cdda"] }
sha1 = "0.10"
base64 = "0.22"
owo-colors = "4"

[build-dependencies]
system-deps = "7"

[package.metadata.system-deps]
libcdio = "2"
libcdio_cdda = "2"
libcdio_paranoia = "2"
libiso9660 = "0"
libudf = "0"
