[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "rippy"
version = "0.2.1"
description = "CD MusicBrainz Lookup + Rip + FLAC Encoding"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"discid",
	"musicbrainzngs"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
rippy = "rippy.cli:main"
